--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Coxinharia</title>
+</head>
+<body>
+   <header>
+        <p>Cabeçalho</p>
+   </header> <h1> Coxinharia</h1>
+   <main>
+         <p> escrever parágrafo </p>
+        <img id="imagem1" src="nome.jpeg">
+        <p> escrever parágrafo </p>
+        <p> escrever parágrafo </p>
+   </main> 
 
+   <footer>
+    <p> NOME DA EQUIPE </p>
+   </footer>
+
+</body>
+</html>
